--- a/Core.Logging/Core.Logging.csproj
+++ b/Core.Logging/Core.Logging.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core.Interfaces\Core.Interfaces.csproj" />
+    <ProjectReference Include="..\Core.Reflection\Core.Reflection.csproj" />
   </ItemGroup>
 
 </Project>
