--- a/Core.Seeding/Core.Seeding.csproj
+++ b/Core.Seeding/Core.Seeding.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core.Exceptions\Core.Exceptions.csproj" />
     <ProjectReference Include="..\Core.Interfaces\Core.Interfaces.csproj" />
+    <ProjectReference Include="..\Core.Models\Core.Models.csproj" />
   </ItemGroup>
 
 </Project>
