--- a/Core.Messaging/Core.Messaging.csproj
+++ b/Core.Messaging/Core.Messaging.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\Core.Models\Core.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Implementations\" />
+  </ItemGroup>
+
 </Project>
