--- a/Core.Seeding.Tests/Core.Seeding.Tests.csproj
+++ b/Core.Seeding.Tests/Core.Seeding.Tests.csproj
@@ -48,7 +48,11 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="SeedDatumTests.cs" />
+    <Compile Include="SeederExTests.cs" />
+    <Compile Include="SeederTests.cs" />
+    <Compile Include="SeedStrategyTests.cs" />
+    <Compile Include="SeedBuilerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
