--- a/Core.Security/Core.Security.csproj
+++ b/Core.Security/Core.Security.csproj
@@ -8,4 +8,12 @@
     <ProjectReference Include="..\Core.Interfaces\Core.Interfaces.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Authentication\Implementations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Security.Cryptography.Cng" Version="4.5.0" />
+  </ItemGroup>
+
 </Project>
