Progress check-in
- Updating Messaging library
- Updating Data Access library

--- a/Core.Messaging/Core.Messaging.csproj
+++ b/Core.Messaging/Core.Messaging.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Core.Exceptions\Core.Exceptions.csproj" />
     <ProjectReference Include="..\Core.Models\Core.Models.csproj" />
   </ItemGroup>
 
